--- a/sendmail/templates/updatestaff.html
+++ b/sendmail/templates/updatestaff.html
@@ -37,13 +37,13 @@
                     <div class="space-y-4">                        
                         {% for field in form %}                                
                             <div>
-                                <p class="font-bold text-gray-600">{{ field.label }}</p> 
+                                <p class="font-bold text-gray-500">{{ field.label }}</p> 
                                 {% render_field field class+="text-md lg:text-md font-medium relative block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}
                             </div> 
                         {% endfor %}
                     </div>   
         
-                    <!-- Update Cancel Buttons -->
+                    <!-- Update / Cancel Buttons -->
                     <div class="flex items-center w-full space-x-4">
 
                         <!-- Update Cancel -->
@@ -65,10 +65,10 @@
                                                     rounded-md text-white bg-red-700 hover:bg-red-600 focus:outline-none focus:ring-4 focus:ring-red-500">
                             <a href="{{ request.META.HTTP_REFERER }}">
                                 <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                                    <!-- <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                         stroke-width="2">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
-                                    </svg>
+                                    </svg> -->
                                 </span>
                                 Cancel
                             </a>
@@ -77,30 +77,32 @@
                 </form>
                          
                 <!-- Back to Staff List -->
-                <div class="container flex items-center justify-center">
+                <div class="container inline-flex items-center justify-center">
 
                     <!-- Dashboard -->
-                    <a href="{% url 'index' %}"
-                        class="inline-flex text-sm font-semibold text-gray-700 mt-6 mb-4 mr-1 px-4 py-2 border 
-                            rounded-md border-gray-300 bg-white hover:bg-gray-50 focus:outline-none 
-                            focus:ring-2 focus:ring-gray-300">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                            <path
-                                d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
-                        </svg>
-                        Dashboard
+                    <a href="{% url 'index' %}">                        
+                        <button type="button" class="inline-flex text-sm font-semibold text-gray-700 mt-6 mb-4 px-4 py-2 border 
+                                                    border-2 rounded-l-lg border-gray-300 bg-white hover:bg-gray-50 focus:outline-none 
+                                                    focus:ring-0 focus:ring-gray-300">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                <path
+                                    d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
+                            </svg>
+                            Dashboard
+                        </button>
                     </a>
 
                     <!-- Staff List -->
-                    <a href="{% url 'stafflist' %}"
-                        class="inline-flex text-sm font-semibold text-gray-700 mt-6 mb-4 ml-1 px-4 py-2 border 
-                            rounded-md border-gray-300 bg-white hover:bg-gray-50 focus:outline-none 
-                            focus:ring-2 focus:ring-gray-300">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                            stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 10h16M4 14h16M4 18h16" />
-                        </svg>
-                        Stafflist
+                    <a href="{% url 'stafflist' %}">                            
+                        <button type="button" class="inline-flex text-sm font-semibold text-gray-700 mt-6 mb-4 px-4 py-2 border 
+                                                    border-2 border-l-0 rounded-r-lg border-gray-300 bg-white hover:bg-gray-50 focus:outline-none 
+                                                    focus:ring-0 focus:ring-gray-300">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 10h16M4 14h16M4 18h16" />
+                            </svg>
+                            Stafflist
+                        </button>
                     </a>
                 </div>
             </div>
