--- a/sendmail/templates/base.html
+++ b/sendmail/templates/base.html
@@ -1,20 +1,22 @@
 {% load static tailwind_tags %}
+{% load active_link_tags %}
 {% load static %}
+
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>Django Tailwind</title>
+        {% block title%}{% endblock %}
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-gray-200 font-sans py-8 px-4">
+	<body class="bg-gray-200 font-sans p-4">
         
 		<!-- Navbar -->
-		<nav class="bg-white rounded-md shadow-lg px-2 sm:px-4 py-2.5 dark:bg-gray-800">
+		<nav class="bg-white rounded-md shadow-lg px-2 sm:px-4 py-3 md:py-3 dark:bg-gray-800">
 	
 			<!-- Navbar Container -->
 			<div class="container flex flex-wrap justify-between items-center mx-auto">
@@ -51,11 +53,14 @@
 	
 						<!-- Home -->
 						<li>
-							<a href="{% url 'index' %}" class="block py-2 pr-4 pl-3 text-white bg-blue-600 rounded md:bg-transparent 
-										md:text-blue-700 md:p-0 dark:text-white" aria-current="">
+							<a href="{% url 'index' %}" class="{% active_link 'index' strict=True css_class='text-blue-700' %} block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 
+																hover:bg-gray-50 md:hover:bg-transparent md:border-0 
+																md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white 
+																dark:hover:bg-gray-700 dark:hover:text-white 
+																md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
-									<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" viewBox="0 0 20 20"
-										fill="currentColor">
+									<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" viewBox="0 0 20 20" fill="none" stroke="currentColor"
+										stroke-width="2">
 										<path
 											d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
 									</svg>
@@ -66,9 +71,12 @@
 	
 						<!-- Add a Staff -->
 						<li>
-							<a href="{% url 'addstaff' %}" class="block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 
-										md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white 
-										md:dark:hover:bg-transparent dark:border-gray-700">
+							<a href="{% url 'addstaff' %}" 
+									class="{% active_link 'addstaff' css_class='text-blue-700' %} block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 
+											hover:bg-gray-50 md:hover:bg-transparent md:border-0 
+											md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white 
+											dark:hover:bg-gray-700 dark:hover:text-white 
+											md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
 									<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-6 w-6" fill="none"
 										viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -82,7 +90,7 @@
 	
 						<!-- Staff list -->
 						<li>
-							<a href="{% url 'stafflist' %}" class="block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 
+							<a href="{% url 'stafflist' %}" class="{% active_link 'stafflist' css_class='text-blue-700' %} block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 
 										md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white 
 										md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
@@ -100,7 +108,7 @@
 	
 						<!-- Birthdays -->
 						<li>
-							<a href="{% url 'birthday' %}" target="_blank" class="block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 
+							<a href="{% url 'birthday' %}" target="_blank" class="{% active_link 'birthday' css_class='text-blue-700' %} block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 
 										md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white 
 										md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
@@ -124,21 +132,23 @@
 	</body>
 	
 	<!-- Footer -->	
-	<footer class="px-4 bg-none -mt-24 md:px-6 dark:bg-gray-800">		
+	<footer class="px-4 bg-none pb-4 bottom-0 md:bottom-0 md:px-6 dark:bg-gray-800">		
 
 		<!-- Horizontal line -->
 		<hr class="my-6 border border-1 border-gray-300 sm:mx-auto dark:border-gray-700 lg:my-8">
 
-		<!-- Copyright and Social Media section -->
-		<div class="sm:flex sm:items-center sm:justify-between">
+		<!-- Copyright, Address and Social Media container -->
+		<div class="flex md:flex-row md:justify-between items-center flex-col space-y-8 md:space-y-px justify-between">
 			<!-- Copyright section -->
-			<span class="block text-md text-gray-500 sm:text-center dark:text-gray-400">© 2022 <a href="https://wcce.org.ng" target="_blank"
-					class="hover:underline">Staff Directory™</a>. All Rights Reserved.
+			<span class="block text-md text-gray-500 sm:text-center dark:text-gray-400">© 2022 
+                <a href="https://wcce.org.ng" target="_blank"
+					class="hover:underline">MITC Staff Directory™
+                </a>. All Rights Reserved.
 			</span>
 
 			<!-- Address -->
 			<span class="text-gray-500 text-center">
-				<em>7th Floor, Block C, Secretariat complex, Sapele Road, Benin City, Edo State, Nigeria</em>
+				<em>7th Floor, Block C, Secretariat Complex, Sapele Road, Benin City, Edo State, Nigeria</em>
 			</span>
 
 			<!-- Social Media Icons -->
