--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -2,6 +2,9 @@
 {% load widget_tweaks %}
 {% load static %}
 
+{% block title %}
+    <title>{{ title }}</title>
+{% endblock %}
 
 {% block content %}
     <!-- Search bar -->
@@ -24,7 +27,7 @@
     
             <!-- Submit Query -->
             <button type="submit" class="px-8 py-4 ml-2 text-md font-medium text-white bg-blue-700 rounded-md border
-                                            border-4 border-blue-700 hover:border-blue-800 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 
+                                            border-2 border-blue-700 hover:border-blue-800 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 
                                             dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
@@ -37,7 +40,7 @@
     
     
     <!-- Staff list -->
-    <div class="p-6 lg:p-8 lg:pb-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md sm:p-10 min-h-full justify-center">
+    <div class="p-6 md:pb-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md sm:p-10 min-h-full justify-center">
         <div class="flex justify-between items-center mb-4">
             <h5 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">Staff List</h5>    
         </div>
@@ -76,8 +79,8 @@
                                     <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
                                                                             text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
                                                                             focus:ring-2 focus:ring-gray-300">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="currentColor"
-                                            viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                                            stroke-width="2">
                                             <path stroke-linecap="round" stroke-linejoin="round"
                                                 d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                                         </svg>
@@ -95,28 +98,54 @@
     <!-- Pagination -->
     {% block pagination %}
         {% if is_paginated %}
-            <div class="container font-medium text-gray-500 text-md flex items-center justify-center mb-28  mt-8 md:mb-28 pagination ">
-                <span class="page-links flex items-center justify-between">
-                    {% if page_obj.has_previous %}
-                        <a class="inline-flex items-center font-medium text-sm px-4 py-2 hover:bg-gray-50 
-                                    bg-white text-gray-700 rounded-md border border-gray-300 focus:outline-none 
-                                    focus:ring-2 focus:ring-gray-400"
-                            href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
-                            Previous
-                        </a>
-                    {% endif %}
-                    <span class="page-current mx-4">
-                        page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                    </span>
-                    {% if page_obj.has_next %}
-                        <a class="inline-flex items-center font-medium text-sm px-4 py-2 bg-white hover:bg-gray-50 
-                                    text-gray-700 rounded-md border border-gray-300 hover:bg-gray-50 focus:outline-none 
-                                    ocus:ring-2 focus:ring-gray-400"
-                            href="{{ request.path }}?page={{ page_obj.next_page_number }}">
-                            Next
-                        </a>
-                    {% endif %}
+            <div class="container font-medium text-gray-500 text-md md:text-lg flex flex-col 
+                        space-y-4 items-center justify-center mt-8 mb-12 md:mb-12 pagination">
+                <!-- Help text -->
+                <span class="page-current mx-4">
+                    Showing Page <span class="text-gray-600 dark:text-white">{{ page_obj.number }}</span>
+                      of <span class="text-gray-600 dark:text-white">{{ page_obj.paginator.num_pages }}</span> Pages
                 </span>
+
+                <!-- Buttons -->
+                <div class="inline-flex mt-2 xs:mt-0">
+                    <!-- Previous Button -->
+                    {% if page_obj.has_previous %}
+                        <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
+                            <button class="inline-flex items-center py-2 px-4 text-sm font-medium text-white bg-gray-800 
+                                            rounded-l hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 
+                                            dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                                    <span class="inline-flex items-center">
+                                        <svg class="mr-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd"
+                                                d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
+                                                clip-rule="evenodd"></path>
+                                        </svg>
+                                        Prev
+                                    </span>
+                            </button> 
+                        </a>                   
+                    {% endif %}
+
+                    
+                    <!-- Next Button -->
+                    {% if page_obj.has_next %}
+                        <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">
+                            <button class="py-2 px-4 text-sm font-medium text-white 
+                                            bg-gray-800 rounded-r border-0 border-l border-gray-700 hover:bg-gray-900 
+                                            dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 
+                                            dark:hover:text-white">
+                                    <span class="inline-flex items-center">
+                                        Next
+                                        <svg class="ml-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd"
+                                                d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
+                                                clip-rule="evenodd"></path>
+                                        </svg>
+                                    </span>
+                            </button>
+                        </a>                  
+                    {% endif %}
+                </div>                
             </div>
         {% endif %}
     {% endblock %}
